Ajustando ondulação da página sobre mim

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <a
             href="#contact"
             class="greetings-button"
-            data-aos="zoom-in"
+            data-aos="zoom-in-top"
             data-aos-delay="200"
             >Contato</a
           >
